# VoiceScribe

./: .gitignore  LICENSE  README.md  app.py  build_wheel.sh  mock_config.yaml  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  audio_config.yaml  whisper_config.py
core/: __init__.py  summarizer.py
notes/: code_issues_fix_summary.md  voicescribe_architecture.md
summaries/: summary1.atxt
transcripts/: Project_notes_12 May_4_44_pm_20260512_232837.txt
utils/: __init__.py  audio_converter.py  logger.py  media_converter.py
